react api frontend url update

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -11,4 +11,4 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-REACT_APP_INVENTORY_API_URL = 'YOUR_CLOUD_RUN_ENDPOINT_HERE'
+REACT_APP_INVENTORY_API_URL ="https://inventory-jebcst445q-uc.a.run.app"
